--- a/digtal_storyteller/index.html
+++ b/digtal_storyteller/index.html
@@ -49,11 +49,11 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Comic Strip</a>
+          <a class="nav-link" href="index.html">Storyteller</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="code.html">code</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" href="about.html">about</a>
         </li>
@@ -213,7 +213,7 @@
 
 
   
-  <div id = "canvas_panel" class="  bg-custom-1">
+  <div id = "canvas_panel" class="bg-custom-1">
 
 
     <canvas id="canvas" class="canvas container-special"></canvas>
@@ -238,7 +238,7 @@
      
         <div class="col-md-4 pb-3 ">
           <div class="container-special">
-            <button  onclick="add_to_gallery()" class="button ">Add comic panal</button>
+            <button  onclick="add_to_gallery()" class="button ">Add to the gallery</button>
           </div>
           <!-- <button type="button" onClick="add_to_gallery()">Add your comic panal</button> -->
           </div>
