update change expression dialog lost bug

--- a/digtal_storyteller/index.html
+++ b/digtal_storyteller/index.html
@@ -246,7 +246,7 @@
 
           <div class="col-md-4 pb-3  ">
             <div class="container-special">
-              <button  onclick="download()" class="button ">Download comic</button>
+              <button  onclick="download()" class="button ">Download the story</button>
             </div>
             <!-- <button type="button" onClick="download()">Download comic strip</button> -->
           </div>
