fix char bg not changing bug and update help page

--- a/digtal_storyteller/about.html
+++ b/digtal_storyteller/about.html
@@ -74,10 +74,10 @@
         <ul>
         <li style="list-style-type: none;">
         <ul>
-        <li>Choose characters, backdrops and expressions of character to build comics.</li>
+        <li>Choose characters, backdrops and expressions of character to build stories.</li>
         <li>Add dialogues to characters.</li>
-        <li>Add favourite comics to the gallery.</li>
-        <li>Download comics.</li>
+        <li>Add favourite stories to the gallery.</li>
+        <li>Download stories.</li>
         </ul>
         </li>
         </ul>
