Add suggestions to the text

--- a/digtal_storyteller/index.html
+++ b/digtal_storyteller/index.html
@@ -257,12 +257,15 @@
 
 
 
+      
+      <div id="recommend_panel" class="bg-custom-1 recommend_panel">
+
+      </div>
       <div id="gallery">
         <!-- <canvas id="mini_canvas_1" class="mini_canvas" width="300" height="300"></canvas> -->
         <!-- <canvas id="mini_canvas_2" class="mini_canvas" width="300" height="300"></canvas> -->
         
       </div>
-
 
 
     </div>
